--- a/bank-app-frontend/Components/Layout/NavMenu.razor
+++ b/bank-app-frontend/Components/Layout/NavMenu.razor
@@ -28,7 +28,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="approval">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Approvals
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Applicants
             </NavLink>
         </div>
 
