--- a/bank-app-frontend/Components/_Imports.razor
+++ b/bank-app-frontend/Components/_Imports.razor
@@ -6,3 +6,4 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
