--- a/bank-app-frontend/Components/Pages/CustomerRegisteration.razor
+++ b/bank-app-frontend/Components/Pages/CustomerRegisteration.razor
@@ -1,64 +1,71 @@
 ﻿@page "/customer/register"
+@layout ApplicationFormLayout;
+@using bank_app_frontend.Components.Layout;
 
-
-<div class="container">
-    <h3 class="text-center">Customer Registeration Form</h3>
+<div class="container mt-5">
+    <h3 class="text-center text-white">Customer Registeration Form</h3>
     <div class="mt-5 d-flex justify-content-center">
-        <div class="m-4 shadow p-5 mb-5 bg-white rounded">
-            <form>
-                <div class="form-group row m-0 mt-1">
-                    <label for="customerName" class="col-sm-5 col-form-label">Name:</label>
-                    <div class="col-sm-7">
+
+        <div class="col-md-6 shadow bg-white rounded">
+
+            <form class="mb-3">
+
+                <div class="form-group row m-2">
+                    <label for="customerName" class="col col-sm-4 text-center col-form-label">Name:</label>
+                    <div class="col col-sm-8">
                         <label class="col-form-label">ABDEFGGH</label>
                     </div>
                 </div>
-
-                <div class="form-group row m-0 mt-1">
-                    <label for="customerCNIC" class="col-sm-5 col-form-label">CNIC:</label>
-                    <div class="col-sm-7">
+                <div class="form-group row m-2">
+                    <label for="customerCNIC" class="col col-sm-4 text-center col-form-label">CNIC:</label>
+                    <div class="col col-sm-8">
                         <label class="col-form-label">ABDEFGGH42342342</label>
                     </div>
                 </div>
 
-                <div class="form-group row m-0 mt-1">
-                    <label for="customerAddress" class="col-sm-5 col-form-label"> Address:</label>
-                    <div class="col-sm-7">
+                <div class="form-group row m-2">
+                    <label for="customerAddress" class="col col-sm-4 text-center col-form-label"> Address:</label>
+                    <div class="col col-sm-8">
                         <label class="col-form-label">ABDEFGGHffsf FSD</label>
                     </div>
                 </div>
 
-                <div class="form-group row m-0 mt-1">
-                    <label for="userName" class="col-sm-5 col-form-label">User Name:</label>
-                    <div class="col-sm-7">
-                        <input type="text" class="form-control"  placeholder="temp User">
+                <div class="form-group row m-2">
+                    <label for="userName" class="col col-sm-4 text-center col-form-label">User Name:</label>
+                    <div class="col col-sm-8">
+                        <input type="text" class="form-control" placeholder="temp User">
                     </div>
                 </div>
 
-                <div class="form-group row m-0 mt-1">
-                    <label for="inputPassword" class="col-sm-5 col-form-label">Password:</label>
-                    <div class="col-sm-7">
+                <div class="form-group row m-2">
+                    <label for="inputPassword" class="col col-sm-4 text-center col-form-label">Password:</label>
+                    <div class="col col-sm-8">
                         <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                     </div>
                 </div>
 
-                <div class="form-group row m-0 mt-1">
-                    <label for="inputPassword" class="col-sm-5 col-form-label">Confirm Password:</label>
-                    <div class="col-sm-7">
+                <div class="form-group row m-2">
+                    <label for="inputPassword" class="col col-sm-4 text-center col-form-label">Confirm Password:</label>
+                    <div class="col col-sm-8">
                         <input type="password" class="form-control" id="inputPassword" placeholder="Confirm Password">
                     </div>
                 </div>
 
-                <div class="form-group row m-0 mt-2">
-                    <div class="col-sm-4"></div> <!-- Offset for the submit button -->
-                    <div class="col-sm-8">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
+                <div class="mt-2 text-center">
+                    <button type="submit" class="btn btn-primary">Enter details</button>
                 </div>
             </form>
         </div>
     </div>
 
 </div>
+
+<style>
+    body
+    {
+        background-color: #7BABF0;
+    }
+</style>
 
 
 @code {
