--- a/bank-app-frontend/Components/Pages/CustomerRegisteration.razor
+++ b/bank-app-frontend/Components/Pages/CustomerRegisteration.razor
@@ -1,14 +1,15 @@
 ﻿@page "/customer/register"
 @layout ApplicationFormLayout;
 @using bank_app_frontend.Components.Layout;
-
+@using Models;
+<Toasts class="p-3" Messages="messages" AutoHide="true" Delay="6000" Placement="ToastsPlacement.TopCenter" />
 <div class="container mt-5">
     <h3 class="text-center text-white">Customer Registeration Form</h3>
     <div class="mt-5 d-flex justify-content-center">
 
         <div class="col-md-6 shadow bg-white rounded">
 
-            <form class="mb-3">
+            <form class="mb-3" @onsubmit="SubmitData">
 
                 <div class="form-group row m-2">
                     <label for="customerName" class="col col-sm-4 text-center col-form-label">Name:</label>
@@ -33,21 +34,21 @@
                 <div class="form-group row m-2">
                     <label for="userName" class="col col-sm-4 text-center col-form-label">User Name:</label>
                     <div class="col col-sm-8">
-                        <input type="text" class="form-control" placeholder="temp User">
+                        <input type="text" class="form-control" placeholder="User Name" required minlength="3" maxlength="10" @bind-value="customer.UserName">
                     </div>
                 </div>
 
                 <div class="form-group row m-2">
                     <label for="inputPassword" class="col col-sm-4 text-center col-form-label">Password:</label>
                     <div class="col col-sm-8">
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" required minlength="5" maxlength="15" @bind-value="customer.Password">
                     </div>
                 </div>
 
                 <div class="form-group row m-2">
                     <label for="inputPassword" class="col col-sm-4 text-center col-form-label">Confirm Password:</label>
                     <div class="col col-sm-8">
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Confirm Password">
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Confirm Password" required minlength="5" maxlength="15" @bind-value="confirmPassword">
                     </div>
                 </div>
 
@@ -69,5 +70,33 @@
 
 
 @code {
+    List<ToastMessage> messages;
+    Customer customer;
+    string confirmPassword;
+
+    protected override void OnInitialized()
+    {
+        // You can initialize or use someComponentRef here
+        messages = new List<ToastMessage>();
+        customer = new Customer();
+        confirmPassword = string.Empty;
+    }
+    private void ShowMessage(ToastType toastType, string title, string description) => messages.Add(CreateToastMessage(toastType, title, description));
+
+    private ToastMessage CreateToastMessage(ToastType toastType, string title, string description)
+    => new ToastMessage
+        {
+            Type = toastType,
+            Title = title,
+            Message = description,
+        };
+
+    public void SubmitData()
+    {
+        if(!customer.Password.Equals(confirmPassword))
+        {
+            ShowMessage(ToastType.Warning, "WARNING!", "Passwords do not match");
+        }
+    }
 
 }
