--- a/bank-app-frontend/Components/_Imports.razor
+++ b/bank-app-frontend/Components/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using BlazorBootstrap;
