--- a/bank-app-frontend/Components/Layout/MainLayout.razor
+++ b/bank-app-frontend/Components/Layout/MainLayout.razor
@@ -12,3 +12,4 @@
         </article>
     </main>
 </div>
+<Toasts class="p-3" AutoHide="true" Delay="4000" Placement="ToastsPlacement.TopCenter" />
