--- a/bank-app-frontend/Components/Layout/NavMenu.razor
+++ b/bank-app-frontend/Components/Layout/NavMenu.razor
@@ -32,6 +32,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="userDetail">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> User Detail
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
