--- a/bank-app-frontend/Components/Pages/TransactionComponent.razor
+++ b/bank-app-frontend/Components/Pages/TransactionComponent.razor
@@ -1,4 +1,4 @@
-﻿@page "/transaction";
+﻿@page "/customer/transaction";
 @using Models;
 @using Services;
 @inject ApplicantService applicantService;
