--- a/bank-app-frontend/Components/Layout/NavMenu.razor
+++ b/bank-app-frontend/Components/Layout/NavMenu.razor
@@ -22,6 +22,17 @@
             </NavLink>
         </div>
 
+        @if(applicantDetails!= null || tellerDetails!=null)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link">
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Name:
+                    @(userType == UserType.TELLER ? tellerDetails?.Name : applicantDetails?.ApplicateName)
+                </NavLink>
+            </div>
+        }
+
+
         @if (userType == UserType.TELLER)
         {
             <div class="nav-item px-3">
